exports[`ListSeparator component renders properly 1`] = `
<div
  className="separator">
  <p
    className="separator-text">
    Testing 123
  </p>
</div>
`;

exports[`ListSeparator component renders properly with classes 1`] = `
<div
  className="separator bold blue">
  <p
    className="separator-text bold blue">
    Testing 123
  </p>
</div>
`;
